complete the auth feature

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
     --color-dark-gray:#1E293B;
     --color-dark-gray-background:#121212;
     --color-header:#1E293B;
-    --color-light-gray:#F8FAFC;
+    --color-light-gray:#b4b4b4;
     --color-input-dark:#1E1E1E;
     --color-gray-border:#303030;
     --color-gray-btn:#242424;
