finish chat module+youtubeResource

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,17 +7,145 @@
 @theme {
     --font-poppins: "Poppins", serif;
     --color-primary-blue:#2563EB;
+    --color-header:#1E293B;
+
+    --color-input-dark:#1E1E1E;
+    --color-light-gray:#b4b4b4;
     --color-dark-gray:#1E293B;
     --color-dark-gray-background:#121212;
-    --color-header:#1E293B;
-    --color-light-gray:#b4b4b4;
-    --color-input-dark:#1E1E1E;
     --color-gray-border:#303030;
     --color-gray-btn:#242424;
+    
     --color-secondary-text:#64748B;  
     --color-success-green:#10B981;
     --color-Error:#EF4444;
     --color-highlights-yellow:#FBBF24;
+
+
+/* dark color */
+    --theme-secondary-color: #cedae2;
+    --theme-container-background: #141f2d;
+    --theme-container-accent-background: #202c3d;
+    --theme-container-background-hover: #1c2c3f;
+    --theme-container-box-shadow: none;
+    --theme-container-border: 1px solid #22303f;
+    --theme-social-icon-invert: invert(100%);
+    --theme-color: #ffffff;
+    --color-gray-text: #f9f9f9;
+    --color-gray-text-inverted: #000;
+    --color-gray-text-100: var(--color-gray-text);
+    --color-gray-text-90: #efefef;
+    --color-gray-text-80: #d6d6d7;
+    --color-gray-text-70: #bdbdbd;
+    --color-gray-text-60: #a3a3a3;
+    --color-gray-text-50: #8a8a8a;
+    --color-gray-text-40: #717171;
+    --color-gray-text-30: #575757;
+    --color-gray-text-20: #3d3d3d;
+    --color-gray-text-10: #242424;
+    --color-gray-text-0: #090909;
+    --accent-brand-lighter: rgb(var(--indigo-400));
+    --accent-brand: rgb(var(--indigo-500));
+    --accent-brand-darker: rgb(var(--indigo-600));
+    --accent-success: rgb(var(--green-600));
+    --accent-success-darker: rgb(var(--green-700));
+    --accent-success-lighter: rgb(var(--green-500));
+    --accent-success-a10: rgba(var(--green-600), 0.2);
+    --accent-warning: rgb(var(--yellow-500));
+    --accent-warning-darker: rgb(var(--yellow-600));
+    --accent-warning-lighter: rgb(var(--yellow-400));
+    --accent-warning-a10: rgba(var(--yellow-500), 0.2);
+    --accent-danger: rgb(var(--red-600));
+    --accent-danger-darker: rgb(var(--red-700));
+    --accent-danger-lighter: rgb(var(--red-500));
+    --accent-danger-a10: rgba(var(--red-600), 0.2);
+    --body-bg: rgb(var(--black));
+    --body-color: rgb(var(--grey-50));
+    --body-color-inverted: rgb(var(--black));
+    --card-bg: rgb(var(--grey-900));
+    --card-color: rgb(var(--grey-50));
+    --card-color-secondary: rgb(var(--grey-300));
+    --card-color-tertiary: rgb(var(--grey-400));
+    --card-secondary-bg: rgb(var(--grey-900));
+    --card-secondary-color: rgb(var(--grey-200));
+    --card-tertiary-bg: rgb(var(--grey-800));
+    --card-tertiary-bg-hover: rgba(var(--grey-800), 0.9);
+    --card-border: rgba(var(--white), 0.15);
+    --card-secondary-border: rgba(var(--white), 0.1);
+    --header-bg: rgb(var(--grey-900));
+    --header-shadow: rgb(var(--black));
+    --footer-bg: rgb(var(--grey-900));
+    --footer-color: rgb(var(--grey-400));
+    --link-bg-hover-alt: rgba(#000);
+    --link-color-current: var(--color-gray-text-100);
+    --link-color-secondary: var(--color-gray-text-70);
+    --link-color-secondary-hover: var(--color-gray-text-80);
+    --link-bg-current: var(--card-bg);
+    --button-primary-bg: var(--accent-brand-darker);
+    --button-primary-bg-hover: var(--accent-brand);
+    --button-primary-color: rgb(var(--white));
+    --button-primary-color-hover: rgb(var(--white));
+    --button-primary-inverted-bg: var(--accent-brand);
+    --button-primary-inverted-bg-hover: var(--accent-brand-lighter);
+    --button-primary-inverted-color: var(--color-gray-text-0);
+    --button-primary-inverted-color-hover: var(--color-gray-text-0);
+    --button-secondary-bg: var(--color-gray-text-20);
+    --button-secondary-bg-hover: var(--color-gray-text-30);
+    --button-secondary-color: var(--color-gray-text-80);
+    --button-secondary-color-hover: var(--color-gray-text-100);
+    --button-outlined-bg: transparent;
+    --button-outlined-bg-hover: rgba(255, 255, 255, 0.035);
+    --button-outlined-border: var(--color-gray-text-20);
+    --button-outlined-border-hover: var(--color-gray-text-30);
+    --button-outlined-color: var(--color-gray-text-80);
+    --button-outlined-color-hover: var(--color-gray-text-100);
+    --button-ghost-bg: transparent;
+    --button-ghost-bg-hover: rgba(255, 255, 255, 0.035);
+    --button-ghost-color: var(--color-gray-text-80);
+    --button-ghost-color-hover: var(--color-gray-text-100);
+    --button-ghost-dimmed-color: var(--color-gray-text-60);
+    --button-ghost-dimmed-color-hover: var(--color-gray-text-100);
+    --button-ghost-inverted-bg: transparent;
+    --button-ghost-inverted-bg-hover: rgba(0, 0, 0, 0.1);
+    --button-ghost-inverted-color: var(--color-gray-text-30);
+    --button-ghost-inverted-color-hover: var(--color-gray-text-10);
+    --form-bg: rgb(var(--black));
+    --form-bg-focus: rgb(var(--black));
+    --form-border: rgb(var(--grey-700));
+    --form-border-hover: rgb(var(--grey-600));
+    --form-border-focus: var(--focus);
+    --form-placeholder-color: rgb(var(--grey-600));
+    --label-primary: rgb(var(--grey-50));
+    --label-secondary: rgb(var(--grey-30));
+    --snackbar-bg: rgb(var(--grey-50));
+    --snackbar-color: rgb(var(--grey-900));
+    --tab-color: rgb(var(--grey-100));
+    --tab-color-hover: var(--accent-brand-lighter);
+    --tab-color-current: rgb(var(--grey-50));
+    --tab-bg-hover: rgba(var(--accent-brand-rgb), 0.2);
+    --tab-bg-current: rgb(rgb(99, 102, 241));
+    --tag-color: rgb(var(--grey-300));
+    --tag-color-hover: rgb(var(--grey-100));
+    --tag-bg: rgba(var(--grey-50), 0.05);
+    --tag-bg-hover: rgba(var(--grey-50), 0.05);
+    --tag-prefix: rgba(var(--grey-50), 0.6);
+    --tag-prefix-hover: rgb(var(--grey-50));
+    --tag-onboarding-bg: var(--grey-900);
+    --tag-onboarding-border: var(--grey-700);
+    --story-comments-bg: rgb(var(--grey-800));
+    --story-comments-bg-top: rgba(var(--grey-800), 0);
+    --story-comments-bg-bottom: rgba(var(--grey-800), 1);
+    
+    --reaction-like-color: rgb(var(--red-500));
+    --reaction-like-bg: rgba(var(--red-500), 0.1);
+    --reaction-custom-color: rgb(var(--green-600));
+    --reaction-custom-bg: rgb(var(--green-600), 0.1);
+    --reaction-save-color: rgb(var(--indigo-500));
+    --reaction-save-bg: rgba(var(--indigo-500), 0.1);
+    --reaction-comment-color: rgb(var(--yellow-500));
+    --reaction-comment-bg: rgba(var(--yellow-500), 0.1);
+    --code-inline-bg: rgb(var(--white), 0.1);
+    --content-row-hover-bg: rgba(#3d3d3d);
 }
 
 code, pre {
