--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,8 @@
 
 
 @import "tailwindcss";
-
+/* @plugin '@tailwindcss/typography'; */
+@config "../../tailwind.config.js";
 @theme {
     --font-poppins: "Poppins", serif;
     --color-primary-blue:#2563EB;
